@@ -22,6 +22,9 @@ with all sufficient information, see the ChangeLog file.
     no longer changes the receiver array instantly every time the
     block is called.  [Feature #10714]
 
+  * Array#flatten and Array#flatten! no longer try to call #to_ary
+    method on elements beyond the given level.  [Bug #10748]
+
 * IO
   * IO#close doesn't raise when the IO object is closed.  [Feature #10718]
 
